--- a/cv/index.html
+++ b/cv/index.html
@@ -7,14 +7,14 @@ title: CV of Your Name
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
 					<h1>Taha Alzein</h1>
 					<address>
-					<strong>Affiliation</strong><br>
-					Street Address<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (123) 456-7890<br>
+					<strong>Address</strong><br>
+					Ranunkelvej 305b<br>
+					8471 Sabro<br>
+					<abbr title="phone">P:</abbr> +45 30428222<br>
 					<span class="obfuscate">zeintaha@hotmail.com</span>
 					</address>
 
-					<h2>Select Publications</h2>
+					<h2>no more for now :)</h2>
 
 					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
 
