--- a/cv/index.html
+++ b/cv/index.html
@@ -10,11 +10,11 @@ title: CV of Your Name
 					<strong>Address</strong><br>
 					Ranunkelvej 305b<br>
 					8471 Sabro<br>
-					<abbr title="phone">P:</abbr> +45 30428222<br>
+					<abbr title="phone">Tel.</abbr> +45 30428222<br>
 					<span class="obfuscate">zeintaha@hotmail.com</span>
 					</address>
 
-					<h2>no more for now :)</h2>
+					<h2>No more for now :)</h2>
 
 					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
 
