--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Taha Alzein, Horrible
 ---
 
 		<div class="blurb">
-			<img src="img.jpg">
+			<img src="/about/img.jpg">
 			<h1>Hi there, I'm Taha Alzein!</h1>
 			<p>I'm best known as the <em>horrible </em>. Just't trust me. <a href="/about">Read more about my life...</a></p>
 		</div> 
