update about page

--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,7 @@ title: About Taha Alzein
 
 		<div class="about">
 			<h1>About</h1>
-			<p>Software developer with +6 years of experience in a sensitive corporate environment. Outgoing and detail-oriented, I am proficient at building and maintaining professional software solutions.</p>
-			<p>Passionate, responsible and committed person, with a get-it-done, on-time spirit, and more than a decade of experience designing, implementing and adapting technically sophisticated applications, Proficient in C# and Java infrastructure, language standards, object modeling technologies and Application Life Cycle management</p>
+			<p>Software developer with +6 years of experience in a sensitive corporate environment. Outgoing and detail-oriented, I am proficient at building and maintaining professional software solutions, more than a decade of experience designing, implementing and adapting technically sophisticated applications, Proficient in C# and Java infrastructure, language standards, object modeling technologies and Application Life Cycle management</p>
 
 			<ul class="contacts">
 				<li><a href="https://www.linkedin.com/in/tahazien/">Linkedin</a></li>
